raitv: finalize method fixed.

In grl_raitv_source_finalize () on lines 282 and 287 were
raitv_[search|browse]_mappings unrefered like they were GObject, but
they are GLists.

g_object_unref () was therfore replaced by g_list_free_full () with
g_free (full free because list is made up of structs allocated by g_new
()).

https://bugzilla.gnome.org/show_bug.cgi?id=697724